# RayTracer

./: CMakeLists.txt  README.md
include/: app.h  camera.h  canvas.h  color.h  computation.h  const.h  convert.h  equal.h  fps.h  intersection.h  material.h  matrix.h  operation.h  pixle_data.h  point.h  point_light.h  ray.h  ray_world.h  shape.h  sphere.h  test_camera.h  test_canvas.h  test_color.h  test_header.h  test_intersection.h  test_light.h  test_material.h  test_matrix.h  test_ray.h  test_ray_world.h  test_sphere.h  test_transformation.h  test_tuple.h  transformation.h  tuple.h  unit_test.h  vector.h  world.h
src/: app.cpp  camera.cpp  canvas.cpp  color.cpp  computation.cpp  convert.cpp  equal.cpp  fps.cpp  intersection.cpp  main.cpp  material.cpp  matrix.cpp  operation.cpp  pixle_data.cpp  point.cpp  point_light.cpp  ray.cpp  ray_world.cpp  shape.cpp  sphere.cpp  test_camera.cpp  test_canvas.cpp  test_color.cpp  test_intersection.cpp  test_light.cpp  test_material.cpp  test_matrix.cpp  test_ray.cpp  test_ray_world.cpp  test_sphere.cpp  test_transformation.cpp  test_tuple.cpp  transformation.cpp  tuple.cpp  unit_test.cpp  vector.cpp  world.cpp
